---------------------------------------------------------------------------------------------------
Version: 0.2.8
Date: ??.01.2024
  Compatibility:
    - Mods can now force the victory, even if it has been reached before.
    - Mods can now specify a custom victory message. This message can optionally be different for winners and losers.
  Changes:
    - More consistent and safer formatting of numbers. Now with working unit tests.
    - Safer gathering of statistics from other mods by suppressing any crashes.
    - Add some Cargo Ships statistics.
  Bugfixes:
    - Always show Victory Screen to all players (even when in f.i. Editor Extensions lab).
---------------------------------------------------------------------------------------------------
Version: 0.2.7
Date: 11.01.2024
  Bugfixes:
    - Fix that percentages would not have been shown correctly.
---------------------------------------------------------------------------------------------------
Version: 0.2.6
Date: 10.01.2024
  Features:
    - Better compatibility with mods that add compatibility after BVS is added. BVS should now detect
      this automatically.
    - Added command `/reset-victory-condition` to reset a victory logged by BVS in case something goes
      wrong. This command can only be used by admins.
    - Added command `/is-victory-pending` to deterrmine if a victory condition is still pending, and
      what type of victory condition (vanilla or custom). Usable by all players and makes no changes.
  Changes:
    - Optimize Peak Power Production calculation. 
---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: 08.01.2024
  Bugfixes:
    - Fix crash when loading editor world, twice. (Thanks Keira!).
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 06.01.2024
  Bugfixes:
    - Fix crash after load in certain situations (Thanks asfoitio!).